the name of 'phones' was changed to 'cell phones' in a comment

--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,8 @@ footer p {
 }
 
 /* medias queries */
-/* phones */
+
+/* cell phones */
 @media all and (min-width: 321px) and (max-width: 767px) {
   nav {
     padding: 20px;
