--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ footer p {
   top: 15px;
 }
 
-/* medias queries */
+/* media queries */
 
 /* cell phones */
 @media all and (min-width: 321px) and (max-width: 767px) {
