--- a/css/style.css
+++ b/css/style.css
@@ -131,9 +131,9 @@ footer p {
 
 #subtitle {
   color: white;
-  font-size: 22px;
+  font-size: 30px;
   text-align: center;
-  margin: 10px 550px;
+  margin: 10px 0px;
 }
 
 #titleposition {
@@ -159,6 +159,79 @@ footer p {
 }
 
 /* media queries */
+@media all and (max-width: 320px) {
+  nav {
+    padding: 10px;
+  }
+
+  nav a {
+    font-size: 12px;
+  }
+
+  hr {
+    margin: 0px 25px;
+  }
+
+  table {
+    margin: auto;
+    padding: 15px 5px;
+  }
+
+  th,
+  td {
+    padding: 2px 1px;
+    font-size: 12px;
+    text-align: center;
+  }
+
+  footer p {
+    font-size: 12px;
+  }
+
+  footer a {
+    font-size: 15px;
+  }
+
+  #mainimg {
+    height: 200px;
+  }
+
+  #title {
+    font-size: 30px;
+  }
+
+  #subtitle {
+    font-size: 9px;
+    margin: 10px 0px;
+  }
+
+  #titleposition {
+    position: absolute;
+    top: 50px;
+    width: 100%;
+    z-index: -1;
+  }
+
+  #chefimg {
+    width: 250px;
+  }
+
+  #logoimg {
+    width: 60px;
+    position: fixed;
+    top: 2px;
+    left: 5px;
+  }
+
+  #chatimg {
+    z-index: 1;
+    width: 50px;
+    padding: 5px;
+    bottom: 95px;
+    right: 6px;
+  }
+}
+
 @media all and (min-width: 321px) and (max-width: 767px) {
   nav {
     padding: 20px;
@@ -252,89 +325,11 @@ footer p {
   }
 }
 
-@media all and (max-width: 320px) {
-  nav {
-    padding: 10px;
-  }
-
-  nav a {
-    font-size: 12px;
-  }
-
-  hr {
-    margin: 0px 25px;
-  }
-
-  table {
-    margin: auto;
-    padding: 15px 5px;
-  }
-
-  th,
-  td {
-    padding: 2px 1px;
-    font-size: 12px;
-    text-align: center;
-  }
-
-  footer p {
-    font-size: 12px;
-  }
-
-  footer a {
-    font-size: 15px;
-  }
-
-  #mainimg {
-    height: 200px;
-  }
-
-  #title {
-    font-size: 30px;
-  }
-
-  #subtitle {
-    font-size: 9px;
-    margin: 10px 0px;
-  }
-
-  #titleposition {
-    position: absolute;
-    top: 50px;
-    width: 100%;
-    z-index: -1;
-  }
-
-  #chefimg {
-    width: 250px;
-  }
-
-  #logoimg {
-    width: 60px;
-    position: fixed;
-    top: 2px;
-    left: 5px;
-  }
-
-  #chatimg {
-    z-index: 1;
-    width: 50px;
-    padding: 5px;
-    bottom: 95px;
-    right: 6px;
-  }
-}
-
-@media all and (min-width: 1024px) and (max-width: 1280px) {
+@media all and (min-width: 992px){
   #titleposition {
     position: absolute;
     top: 200px;
     width: 100%;
     z-index: -1;
-  }
-
-  #subtitle {
-    font-size: 30px;
-    margin: 10px 0px;
   }
 }
